--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haddes</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="logo left">
             <img src="img/logo.png" alt="" class="resp">
-        </div>
+        </div id="hamb">
         <ul class="right">
-            <li><hr></li>
-            <li><hr></li>
-            <li><hr></li>
+            <li>
+                <hr>
+            </li>
+            <li>
+                <hr>
+            </li>
+            <li>
+                <hr>
+            </li>
+
         </ul>
         <div class="clrs"></div>
         <section class="block">
@@ -25,91 +36,120 @@
     <main>
         <section class="rouge relative">
             <div class="contain">
-            <div class="photo gauche absolute">
-                <img src="img/zagreus.png" alt="" class="resp">
+                <div class="zagreus gauche absolute">
+                    <img src="img/zagreus.png" alt="" class="resp">
+                </div>
+                <div class="txtR droite absolute">
+                    <h2>ZAGREUS</h2>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates
+                        doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam
+                        repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque
+                        molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi
+                        culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil
+                        neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident
+                        laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium
+                        quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur
+                        explicabo magnam in nemo earum saepe.</P>
+                </div>
             </div>
-            <div class="txtR droite absolute">
-                <h2>ZAGREUS</h2>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur explicabo magnam in nemo earum saepe.</P>
-            </div>
-        </div>
         </section>
         <section class="jaune relative">
-            <div class="contain ">
-            <div class="txtL  gauche absolute">
-                <h2>HADES</h2>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur explicabo magnam in nemo earum saepe.</P>
+            <div class="contain">
+                <div class="txtL  gauche absolute">
+                    <h2>HADES</h2>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates
+                        doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam
+                        repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque
+                        molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi
+                        culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil
+                        neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident
+                        laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium
+                        quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur
+                        explicabo magnam in nemo earum saepe.</P>
+                </div>
+                <div class="hades droite absolute">
+                    <img src="img/hades.png" alt="" class="resp">
+                </div>
             </div>
-            <div class="hades droite absolute">
-                <img src="img/hades.png" alt="" class="resp">
-            </div>
-        </div>
         </section>
-        <section class="grey relative" >
-            <div class="contain ">
-             <div class="thanatos gauche absolute">
-                <img src="img/Thanatos.png" alt="" class="resp">
-             </div>
-            <div class="txtR droite absolute">
-                <h2>THANATOS</h2>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur explicabo magnam in nemo earum saepe.</P>
+        <section class="grey relative">
+            <div class="contain">
+                <div class="thanatos gauche absolute">
+                    <img src="img/Thanatos.png" alt="" class="resp">
+                </div>
+                <div class="txtR droite absolute">
+                    <h2>THANATOS</h2>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates
+                        doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam
+                        repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque
+                        molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi
+                        culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil
+                        neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident
+                        laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium
+                        quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur
+                        explicabo magnam in nemo earum saepe.</P>
+                </div>
             </div>
-        </div>
         </section>
         <section class="bleu relative">
             <div class="contain ">
-            <div class="txtL gauche absolute">
-                <h2>MEGAREA</h2>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur explicabo magnam in nemo earum saepe.</P>
+                <div class="txtL gauche absolute">
+                    <h2>MEGAREA</h2>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe mollitia voluptates
+                        doloribus. Accusantium autem harum ad officiis, consectetur, excepturi expedita officia totam
+                        repellendus velit illo dolorum tempora ipsa quos iusto dignissimos. Consequuntur itaque
+                        molestiae explicabo quas tempora vel fugit rerum unde dolores, vitae tempore maxime commodi
+                        culpa quisquam distinctio enim! Iure, molestiae doloribus atque tempora veritatis illo nihil
+                        neque eum tenetur maxime, enim voluptatum consectetur debitis, alias pariatur! Provident
+                        laborum, placeat, qui dolore voluptas debitis delectus cumque repudiandae maxime sed praesentium
+                        quasi similique quia veniam. Quod, ipsum iusto minus voluptatem nostrum sequi consequatur
+                        explicabo magnam in nemo earum saepe.</P>
+                </div>
+                <div class="megarea droite absolute">
+                    <img src="img/Megaera.png" alt="" class="resp">
+                </div>
             </div>
-            <div class="megarea droite absolute">
-                <img src="img/Megaera.png" alt="" class="resp">
-            </div>
-        </div>
         </section>
 
-        <section id="dieux" class="relative">
-            <div class="block absolute">
+        <section id="dieux">
+            <div class="block">
                 <h1>LES DIEUX DE L'OLYMPE</h1>
             </div>
-            <div class="bas athena absolute">
-                <img src="img/Athena.png" alt="" class="resp">
-            </div>
-            <div  class="rectangle un absolute">
-                <h2>ATHENA</h2>
-            </div>
-            <div class="bas zeus  absolute">
-                <img src="img/Zeus.png" alt="" class="resp">
-            </div>
-            <div class="rectangle deux absolute">
-                <h2>ZEUS</h2>
-            </div>
-            <div class="bas artemis absolute">
-                <img src="img/Artemis.png" alt="" class="resp">
-            </div>
-            <div class="rectangle trois absolute">
-                <h2>ARTEMIS</h2>
-            </div>
-            <div class="bas demether absolute">
-                <img src="img/Demeter.png" alt="" class="resp">
-            </div>
-            <div class="rectangle quatre absolute">
-                <h2>DEMETHER</h2>
-            </div>
-            <div class="bas poseidon absolute">
-                <img src="img/Poseidon.png" alt="" class="resp">
-            </div>
-            <div class="rectangle cinq absolute">
-                <h2>POSEIDON</h2>
-            </div>
-            <div class="bas ares absolute">
-                <img src="img/Ares.png" alt="" class="resp">
-            </div>
-            <div class="rectangle six absolute">
-                <h2>ARES</h2>
-            </div>
-
+            <section class="row">
+                <div class="centrer">
+                    <div class="athena relative">
+                        <img src="img/Athena.png" alt="" class="autoresp">
+                        <h2 class="absolute placer deux">ATHENA</h2>
+                    </div>
+                    <div class="zeus relative">
+                        <img src="img/Zeus.png" alt="" class="autoresp">
+                        <h2 class="absolute placer deux">ZEUS</h2>
+                    </div>
+                    <div class="artemis relative">
+                        <img src="img/Artemis.png" alt="" class="autoresp">
+                        <h2 class="absolute placer deux">ARTEMIS</h2>
+                    </div>
+                </div>
+            </section>
+            <section class="row">
+                <div class="centrer">
+                    <div class="demether relative">
+                        <img src="img/Demeter.png" alt="" class="autoresp">
+                        <h2 class="absolute placer deux">DEMETHER</h2>
+                    </div>
+                    <div class=" poseidon relative">
+                        <img src="img/Poseidon.png" alt="" class="autoresp">
+                        <h2 class="absolute placer deux">POSEIDON</h2>
+                    </div>
+                    <div class="ares relative">
+                        <img src="img/Ares.png" alt="" class="autoresp">
+                        <h2 class="absolute placer deux">ARES</h2>
+                    </div>
+                </div>
+            </section>
         </section>
+
     </main>
 </body>
+
 </html>
